--- a/app/globals.css
+++ b/app/globals.css
@@ -77,6 +77,11 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
+.special-font {
+  @apply font-zentry;
+  font-feature-settings: "ss01" on;
+}
+
 .special-font b {
   font-family: "Zentry";
   font-feature-settings: "ss01" on;
@@ -108,11 +113,15 @@ body {
 }
 
 .bento-tilt_1 {
-  @apply relative border border-white/20 col-span-2 overflow-hidden rounded-md transition-transform duration-300 ease-out;
+  @apply relative border border-white/20 overflow-hidden rounded-md transition-transform duration-300 ease-out;
 }
 
 .bento-tilt_2 {
   @apply relative col-span-1 row-span-1 overflow-hidden rounded-md transition-transform duration-300 ease-out;
+}
+
+.bento-title {
+  @apply uppercase md:text-6xl text-4xl font-black font-zentry;
 }
 
 .story-img-container {
